# subgraph-rs

./: .travis.yml  Cargo.toml  README.md
cargo-subgraph/: Cargo.toml
cargo-subgraph/src/: api.rs  cmd.rs  command.rs  linker.rs  main.rs  manifest.rs  mappings.rs
cargo-subgraph/src/api/: cargo.rs  graph.rs  ipfs.rs  jsonrpc.rs  wasmopt.rs
cargo-subgraph/src/cmd/: create.rs  deploy.rs
cargo-subgraph/src/command/: build.rs  create.rs  deploy.rs
cargo-subgraph/test/: my_subgraph.wasm  schema.graphql  subgraph.linked.yaml  subgraph.yaml
docker/: README.md  docker-compose.yml  pod.yaml
samples/deep-thought/: Cargo.toml  deploy.sh  schema.graphql  subgraph.yaml
samples/deep-thought/DeepThought/: DeepThought.wasm
samples/deep-thought/DeepThought/abis/: DeepThought.abi
samples/deep-thought/DeepThought/contracts/: DeepThought.sol
samples/deep-thought/src/: lib.rs
src/: abort.rs  ffi.rs  lib.rs  logger.rs  num.rs
src/ffi/: array.rs  buffer.rs  string.rs
src/num/: bigint.rs
src/sys/: host.rs
subgraph/: Cargo.toml
subgraph/src/: lib.rs  sys.rs
subgraph/src/ffi/: array.rs  buffer.rs  string.rs
subgraph/src/num/: bigint.rs
subgraph/src/sys/: host.rs  mock.rs
