[package]
name = "cargo-subgraph"
version = "0.1.0"
authors = ["Gnosis developers <developers@gnosis.io>"]
edition = "2018"
description = "Manage Rust subgraphs 🦀"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.32"
curl = "0.4.33"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
structopt = "0.3.17"
walrus = "0.18.0"
yaml-rust = "0.4.4"
