[package]
name = "cargo-subgraph"
version = "0.1.0"
authors = ["Gnosis developers <developers@gnosis.io>"]
edition = "2018"
description = "Work with subgraphs written in Rust 🦀"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
bs58 = "0.4"
curl = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = { version = "2", features = ["serde"] }
