[package]
name = "deep-thought"
version = "1.0.0"
authors = ["Gnosis developers <developers@gnosis.io>"]
edition = "2018"
description = "Sample subgraph mappings written in Rust 🦀"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
subgraph = { path = "../.." }
